syntax = "proto3";

option csharp_namespace = "GrpcService";

package streamdemo;

service StreamDemo {
	rpc ServerStreamingDemo(Test) returns (stream Test);
	rpc ClientStreamingDemo(stream Test) returns (Test);
}

message Test{
	string TestMessage = 1;
}

